--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/setup-node@v4
       - run: npm ci
       - run: npm run test:coverage
+      - run: npm run analyze
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
