--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -10,13 +10,17 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests with coverage
         run: npm run test:coverage
+
+      - name: Upload coverage report
+        if: success()
+        run: ls -R coverage
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
